# ChunChuGwan

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .grant.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  compose.example.yaml  compose.yaml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.reload.yml  docker-compose.yml  docker-entrypoint.sh  gha-cost-audit.md  gha-settings-checklist.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  db-analyst.md  deep-reasoner.md  default-worker.md  docs-researcher.md  security-auditor.md  task-worker.md  test-runner.md  ui-worker.md
.claude/hooks/: deny-db-writes.sh
.claude/rules/: api-extension.md  authentication.md  capture-crawl.md  dashboard.md  database.md  release-docker.md  search.md  storage.md  testing.md
.claude/skills/gitflow/: SKILL.md  branch.md  pr.md  release.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dco.yml  docker-image.yml  docker.yml  license-review.yml  release.yml
archiver/: auth.py  capture.py  cli.py  config.py  db.py  differ.py  extract.py  oidc.py  pipeline.py  storage.py
archiver/web/: app.py  auth_routes.py  templating.py
archiver/web/templates/: _webauthn.html  account.html  base.html  diff.html  index.html  login.html  logs.html  passkey_setup.html  setup.html  signup.html  snapshot.html  timeline.html  totp.html  totp_setup.html
chunchugwan/: __init__.py  ai_challenge.py  archive_worker.py  auth.py  backup.py  blobstore.py  browser_engine.py  capture.py  certs.py  cli.py  cluster.py  cluster_sync.py  config.py  consent_overlays.py  crawler.py  credentials.py  crypto.py  db.py  db_backup.py  deletion.py  differ.py  doctext.py  documents.py  extract.py  ingest.py  input_replay.py  linkrepair.py  live_challenge.py  mailer.py  migration.py  netcheck.py  optimize.py  pipeline.py  recovery.py  resources.py  scheduler.py  searchindex.py  storage.py  storage_migration.py  storage_usage.py  (+3 more)
chunchugwan/extension/: background.js  manifest.json  popup.html  popup.js
chunchugwan/web/: api_routes.py  app.py  audit.py  auth_routes.py  cluster_routes.py  debug_server.py  i18n.py  maintenance.py  migration_routes.py  permissions.py  release_notes.json  release_notes.py  system_routes.py  templating.py  web_api_routes.py  web_auth_routes.py
chunchugwan/web/templates/: _lang_form.html  _logo.html  _network_tag.html  _pager.html  _schedule_field.html  _snapshot_detail.html  _webauthn.html  account.html  api_keys.html  archive_new.html  auth_base.html  base.html  crawl.html  crawl_goto_missing.html  crawls.html  dashboard.html  diff.html  documents.html  go_missing.html  groups.html  index.html  invite.html  live.html  login.html  logs.html  my_archives.html  needs_human.html  passkey_setup.html  pending.html  personal_api_keys.html  schedules.html  search.html  setup.html  signup.html  site.html  site_credentials.html  system.html  (+7 more)
docs/: API.md  AUTHENTICATION.md  CLUSTER.md  CRAWLING.md  DASHBOARD.md  DEVELOPMENT.md  DOCKER.md  EXTENSION_CLIENT_CAPTURE_PLAN.md  OPTIMIZATION.md  ROADMAP.md  SEARCH.md  STORAGE.md
frontend/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
scripts/: gen_release_notes.py  lint-changed.sh
tests/: conftest.py  test_ai_challenge.py  test_api_keys.py  test_archive_status_api.py  test_archive_worker.py  test_audit_log.py  test_auth.py  test_auth_snapshot_access.py  test_backup.py  test_capture.py  test_capture_credentials.py  test_capture_engine.py  test_certs.py  test_challenge.py  test_cli.py  test_cluster.py  test_cluster_transfer.py  test_config.py  test_crawl_web.py  test_crawler.py  test_credential_security.py  test_credentials.py  test_db.py  test_db_backup.py  test_db_lock.py  test_debug_server.py  test_deletion.py  test_differ.py  test_documents.py  test_email_verification.py  test_extension_api.py  test_extension_download.py  test_extension_token.py  test_extract.py  test_https_upgrade.py  test_i18n.py  test_ingest.py  test_insecure_tls.py  test_invites.py  test_linkrepair.py  (+58 more)
tests/fixtures/: article.html  board_list.html  board_list_meta.html  selfsigned-cert.pem  selfsigned-key.pem
(+120 files in other folders)
