[project]
name = "chunchugwan"
version = "0.4.0"
description = "개인 웹 아카이빙 시스템 — 스냅샷 히스토리와 diff 지원"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "playwright>=1.44",
    "lxml>=5.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "pillow>=10.3",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "httpx>=0.28",
    "pyjwt[crypto]>=2.9",
    "python-multipart>=0.0.9",
    "webauthn>=2.7.1",
    "cryptography>=42",
]

[project.optional-dependencies]
# 스텔스 캡처 엔진 — Cloudflare 등의 Runtime.enable 봇 탐지를 우회하는 Playwright
# 드롭인 패치. `uv sync --extra stealth` 로 설치하고 WCCG_CAPTURE_ENGINE=patchright
# 로 켠다 (미설치 시 표준 playwright 로 자동 폴백). browser_engine.py 참조.
stealth = ["patchright>=1.60"]

[project.scripts]
wccg = "chunchugwan.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chunchugwan"]
