[project]
name = "chunchugwan"
version = "0.9.0"
description = "개인 웹 아카이빙 시스템 — 스냅샷 히스토리와 diff 지원"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tylor, Seo", email = "tylorstyle@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "playwright>=1.44",
    "lxml>=5.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pillow>=10.3",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "httpx>=0.28",
    "pyjwt[crypto]>=2.9",
    "python-multipart>=0.0.9",
    "webauthn>=2.7.1",
    "cryptography>=42",
    "pypdf>=4.0",
    # .env 파일 로드 — 로컬 실행(`uv run wccg`) 시 시크릿/설정을 .env 에서 읽는다
    # (config.py 가 load_dotenv 호출). 도커는 compose 의 env_file 로 주입한다.
    "python-dotenv>=1.0",
    # S3/MinIO blob 백엔드 (선택 — WCCG_S3_* 설정 시에만 활성, blobstore.S3BlobStore).
    "boto3>=1.34",
]

[project.optional-dependencies]
# 스텔스 캡처 엔진 — Cloudflare 등의 Runtime.enable 봇 탐지를 우회하는 Playwright
# 드롭인 패치. `uv sync --extra stealth` 로 설치하고 WCCG_CAPTURE_ENGINE=patchright
# 로 켠다 (미설치 시 표준 playwright 로 자동 폴백). browser_engine.py 참조.
stealth = ["patchright>=1.60"]

[project.scripts]
wccg = "chunchugwan.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    # S3 백엔드 테스트용 인메모리 S3 모킹 (네트워크·실제 S3 불필요).
    "moto[s3]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chunchugwan"]
